--- a/options.html
+++ b/options.html
@@ -14,47 +14,61 @@
 </style>
 <script>
 
+function gi(n)
+{
+	return document.getElementById(n);
+}
+
 function saveIt()
 {
-  if (window.localStorage == null) {
-    alert('Local storage is required for changing providers');
-    return;
-  }
-  var inputText = document.getElementById('username');
-  window.localStorage.customUserName = inputText.value;
+	if (window.localStorage == null)
+	{
+		alert('Local storage is required for changing providers');
+		return;
+	}
+	var inputText = gi('username');
+	window.localStorage.customUserName = inputText.value;
+	inputText = gi('scuttleurl');
+	window.localStorage.scuttleUrl = inputText.value;
 }
 
 function main()
 {
-   if (window.localStorage == null) {
-     alert("LocalStorage must be enabled for changing options.");
-     document.getElementById('username').disabled = true;
-     return;
-   }
+	if (window.localStorage == null)
+	{
+		alert("LocalStorage must be enabled for changing options.");
+		document.getElementById('username').disabled = true;
+		return;
+	}
 
-   if (typeof window.localStorage.customUserName == "string")
-     document.getElementById('username').value = window.localStorage.customUserName;
+	if (typeof window.localStorage.customUserName == "string")
+	{
+		gi('username').value = window.localStorage.customUserName;
+		gi('scuttleurl').value = window.localStorage.scuttleUrl;
+	}
 }
+
 </script>
 </head>
 <body onload="main()">
 <table border="0">
-<tr>
-  <td rowspan="2" valign="top" align="center" width="80">
-    <img src="logo_24.png" width="32" height="32" />
-  </td>
-  <td height="22"></td>
-</tr>
-<tr>
-  <td valign="center">
-    <div id="providerSelection">
-    <strong>Input your username for saving the page and scrapbooking:</strong>
-    <br /><br />
-    <input id="username" type="text" name="username" value="" onclick="saveIt()">&nbsp;Your username<br>
-    <input type="button" name="doit" value="Save Username" onclick="saveIt()">
-    </div>
-  </td>
-</tr>
+	<tr>
+		<td rowspan="2" valign="top" align="center" width="80">
+			<img src="logo_24.png" width="32" height="32" />
+		</td>
+		<td height="22"></td>
+	</tr>
+	<tr>
+		<td valign="center">
+			<div id="providerSelection">
+				<strong>Input your username for saving the page and scrapbooking:</strong>
+				<br /><br />
+				<input id="scuttleurl" type="text" name="scuttleurl" value="" >&nbsp;URL for your Scuttle Install, <b>http://localhost/scuttle/bookmarks.php/</b> for example<br>
+				<input id="username" type="text" name="username" value="" >&nbsp;Your Username<br>
+				<input type="button" name="doit" value="Save" onclick="saveIt()">
+			</div>
+		</td>
+	</tr>
 </table>
 </body>
 </html>
